--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
   </head>
   <body>
     <img src="./logo.png" alt="">
+    <div class="records">
+      <a class="record_a" href="https://youtube.com/playlist?list=PLumH9Doh_PEbBh0fAs4zQQifnjCrmCUEk" target="_blank">録画はこちら</a></div>
     <p class="title">Web Design入門</p>
+
 
     <div class="contents">
       <li><a href="https://drive.google.com/file/d/1Bm208fCToR6GPAO_e2Rc2svPPKjRS3rM/view?usp=sharing" target="_blank">0. 環境構築</a></li>
       <li><a href="https://drive.google.com/file/d/1bKNOtIzCBkZ2t9AcuZJs9arYfG4x9WlI/view?usp=sharing" target="_blank">1. 自己紹介サイト①</a></li>
     </div>
+
 
   </body>
 </html>
