--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="contents">
       <li><a href="https://drive.google.com/file/d/1Bm208fCToR6GPAO_e2Rc2svPPKjRS3rM/view?usp=sharing" target="_blank">0. 環境構築</a></li>
       <li><a href="https://drive.google.com/file/d/1bKNOtIzCBkZ2t9AcuZJs9arYfG4x9WlI/view?usp=sharing" target="_blank">1. 自己紹介サイト①</a></li>
+      <li><a href="https://drive.google.com/file/d/1DZjLNvC2nLJ5eBMzqUcuEUHsHLkFdrG2/view?usp=sharing" target="_blank">2. ヘッダーを作ろう</a></li>
     </div>
 
 
